--- a/config.json
+++ b/config.json
@@ -1,16 +1,14 @@
 {
 "ical_input_files": {
-	"calsrcqmul": "~/git/stored_docs/cal/QMUL.ics",
-	"calsrchome": "~/git/stored_docs/cal/Home.ics"
+	"calsrcqmul": "~/Downloads/reachcalendar.ics"
 },
 
 "html_output_file": "rendered.html",
 
 "sleepdur": 10,
 
-"view_days_before": 180,
-"view_days_after":  180,
+"view_days_before": 30,
+"view_days_after":  30,
 
 "verbose": true
 }
-
