working vertical year view

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 "ical_input_files": {
-	"calsrcqmul": "~/Downloads/reachcalendar.ics"
+	"calsrcqmul": "~/Downloads/calendar (1).ics"
 },
 
 "html_output_file": "rendered.html",
